# practix_billing

./: .gitignore  README.md
cloud_gate/: README.md  docker-compose.yml  env.sample  pyproject.toml
cloud_gate/nginx/: Dockerfile  nginx.conf
cloud_gate/nginx/configs/: site.conf
cloud_gate/src/: Dockerfile  main.py
cloud_gate/src/api/: payments.py
cloud_gate/src/core/: config.py  logger.py
cloud_gate/src/models/: payments.py
cloud_gate/src/services/: payments.py
integrator_service/: pyproject.toml
manager_service/: Dockerfile  README.md  celerybeat-schedule  create_subscription.puml  docker-compose.yml  entrypoint.sh  pyproject.toml  scheduler.puml  template.env
manager_service/auth_grpc/: auth.proto  auth_pb2.py  auth_pb2_grpc.py  functions.py  set_role.py
manager_service/config/: __init__.py  asgi.py  celery.py  urls.py
manager_service/config/settings/: base.py  dev.py
manager_service/etc/nginx/: nginx.conf
manager_service/subscribtions/: admin.py  apps.py  models.py  urls.py
manager_service/subscribtions/migrations/: 0001_initial.py  0002_alter_tariff_period.py  0003_alter_account_created_at_alter_account_payment_token_and_more.py  0004_alter_bill_account_alter_bill_amount_and_more.py  0005_remove_bill_due_dt_alter_tariff_period.py  0006_alter_tariff_period.py  0007_alter_tariff_period.py  0008_remove_bill_paid_period_alter_tariff_period.py  0009_bill_paid_period_alter_tariff_period.py  0010_alter_account_options_alter_bill_options_and_more.py  (+1 more)
manager_service/tasks/: create_sub.py  daily_bills.py  payment.py  scheduler.py  worker.py
manager_service/utils/: auth_back.py  no_patch_api_views.py  no_patch_router.py  pagination.py
(+4 files in other folders)
