[tool.poetry]
name = "cloud_gate"
version = "0.1.0"
description = "FastAPI service to emulate CloudPayments API for testing"
authors = ["Sergey Simenshteyn <simenshteyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
Faker = "^13.0.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.5"
orjson = "^3.6.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
